--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@ function checkCookie() {
 </head>
 
 <body onload="checkCookie()"></body>
-
+<footer>&copy; Mark Goncalves, April, 9th, 2024 </footer>
 </html>
